# a-share-profit-helper

./: .env.example  .gitignore  README.md  SKILL.md  config.json.example  pyproject.toml
.github/workflows/: ci.yml
references/: INSTALL.md  index.md  rating.md  rules.md
references/core/: feedback-loop.md  four-dimensions.md  tgb-sentiment.md
references/core/rating/: README.md  comfort.md  safety.md
references/flow/: README.md  high-pr-picker.md  integrated-expert.md  market-synthesis.md  post-market.md  pre-market.md  trading-plan.md
references/flow/common/: 01-clarify-needs.md  02-define-time-window.md  03-get-data.md
references/flow/learn/: daily-review.md  market-outlook.md  market-summary.md
references/flow/make-money/: stock-diagnosis.md  stock-picker.md
references/guides/: anchors.md  data-sources.md  date-guide.md  pitfalls.md  scenes.md  templates.md
references/rating/: certainty.md  opportunity.md
scripts/: config_manager.py  run_skill.py
src/: cli.py  main.py  models.py  skill.py  user_context.py
src/config/: settings.py
src/core/: __init__.py  analyzer.py  methodology.py  pipeline.py  rating.py  risk_checker.py  time_context.py
src/modules/: post_market.py  pre_market.py  stock_picker.py  trading_plan.py
src/providers/: __init__.py  base.py  cache_store.py  http_client.py  live.py  offline.py  taoguba_authors.py
src/utils/: time.py
tests/skills/: test_a_shares_master_skill.py
